After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708478 - bluetooth: Fix crash when exiting during a connection
bluetooth: Fix crash when exiting during a connection
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Bluetooth
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-20 17:05 UTC by Bastien Nocera
Modified: 2013-09-22 20:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
bluetooth: Fix crash when exiting during a connection (2.81 KB, patch)
2013-09-20 17:05 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2013-09-20 17:05:18 UTC
.
Comment 1 Bastien Nocera 2013-09-20 17:05:21 UTC
Created attachment 255427 [details] [review]
bluetooth: Fix crash when exiting during a connection

If a connection is on-going, make sure to cancel it before
when finalizing the panel, or we will be crashing once
we've finished connecting/disconnecting.
Comment 2 Matthias Clasen 2013-09-20 17:22:32 UTC
Review of attachment 255427 [details] [review]:

looks good
Comment 3 Bastien Nocera 2013-09-22 20:25:48 UTC
Attachment 255427 [details] pushed as ba4eb42 - bluetooth: Fix crash when exiting during a connection