bluetooth: Fix crash when exiting during a connection

If a connection is on-going, make sure to cancel it before
when finalizing the panel, or we will be crashing once
we've finished connecting/disconnecting.

https://bugzilla.gnome.org/show_bug.cgi?id=708478